Refactoring ProductOptionServiceImplTest to add  when(productOptionRepository.save(any(ProductOption.class))).thenAnswer(invocation -> invocation.getArgument(0)); to enable and disabple product option successfully test for it to pass and not returning null again